--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div id="main">
 
 				<!-- Header -->
-					<header id="header"><div class="grid-container"><div class="curved-box">
+					<header id="header"><div class="curved-box">
 						<h1>Joshua S. White, PhD</h1>
 						<p>Assistant Professor &nbsp;&bull;&nbsp; Engineer</p>
 						<nav>
@@ -32,7 +32,7 @@
 								<li><a href="https://www.utica.edu/people/joshua-white-0" class="fas fa-chalkboard-teacher"><span class="label">Github</span></a></li>
 							</ul>
 						</nav>
-					</div></div></header>
+					</div></header>
 
 				<!-- Footer -->
 					<footer id="footer">
