--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							</ul>
 						</nav>
 						<div class="centered-link">
-							<a href="https://securemind.org/readings.html">My Suggested Reading Lists</a>
+							<a href="./readings.html">My Suggested Reading Lists</a>
 						</div>
 					</div></header>
 
