--- a/readings.html
+++ b/readings.html
@@ -125,7 +125,7 @@
 
 <div class="container">
     <div class="category">
-        <h2>Category 1: Data Science</h2>
+        <h2>Category 1: Generative AI</h2>
         <ul>
             <li>
                 <h3>Ian Goodfellow et al. (2014). “Generative Adversarial Nets.” Advances in Neural Information Processing Systems (NeurIPS).</h3>
@@ -148,7 +148,7 @@
     </div>
 
     <div class="category">
-        <h2>Category 3: Deep Learning</h2>
+        <h2>Category 3: Data Science</h2>
         <ul>
             <!-- Add deep learning resources here -->
         </ul>
