--- a/readings.html
+++ b/readings.html
@@ -181,7 +181,61 @@
     <div class="category">
         <h2>Category 2: Machine Learning</h2>
         <ul>
-            <!-- Add machine learning resources here -->
+                        <li>
+                <h3>Muller and Guido (2017): Introduction to Machine Learning With Python (Ebook)</h3>
+                <p>Introduction to machine learning concepts and applications using Python.</p>
+                <a href="https://www.nrigroupindia.com/e-book/Introduction%20to%20Machine%20Learning%20with%20Python%20(%20PDFDrive.com%20)-min.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Ayodele, Taiwo Oladipupo (2016): "Machine learning overview."</h3>
+                <p>An overview of machine learning concepts and their applications.</p>
+                <a href="https://www.intechopen.com/chapters/10683" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Mitchell, Tom. M. (2017): "Key Ideas in Machine Learning"</h3>
+                <p>Exploration of foundational concepts in machine learning, including key ideas and methodologies.</p>
+                <a href="https://www.cs.cmu.edu/~tom/mlbook/keyIdeas.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Rudin, Cynthia (2019): "Stop explaining black box machine learning models for high stakes decisions and use interpretable models instead."</h3>
+                <p>Discussion on the importance of interpretable models over black-box methods in critical applications.</p>
+                <a href="https://arxiv.org/abs/1811.10154" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Dietterich, Thomas G. (2002): "Ensemble Learning."</h3>
+                <p>An overview of ensemble methods, including bagging, boosting, and their practical applications.</p>
+                <a href="https://courses.cs.washington.edu/courses/cse446/12wi/tgd-ensembles.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Hastie, Trevor, Robert Tibshirani, and Jerome Friedman (2016): Chapters 3, 5, 9, and 10</h3>
+                <p>Advanced topics in data mining and machine learning, covering linear models, ensemble methods, and more.</p>
+                <a href="https://www.sas.upenn.edu/~fdiebold/NoHesitations/BookAdvanced.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Khurana, D., Koli, A., Khatter, K., & Singh, S. (2017): "Natural language processing: State of the art, current trends and challenges."</h3>
+                <p>A comprehensive review of NLP techniques, challenges, and trends.</p>
+                <a href="https://arxiv.org/abs/1708.05148" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+
+            <li>
+                <h3>Blei, David M., and John D. Lafferty (2006): "Dynamic topic models."</h3>
+                <p>An introduction to dynamic topic modeling, its methodology, and applications in machine learning.</p>
+                <a href="https://mimno.infosci.cornell.edu/info6150/readings/dynamic_topic_models.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
         </ul>
     </div>
 
