--- a/readings.html
+++ b/readings.html
@@ -175,6 +175,42 @@
                 <a href="https://arxiv.org/pdf/1312.6114" target="_blank">Read Paper</a>
                 <span class="checkmark">✔</span>
             </li>
+            <li>
+                <h3>Vaswani, Ashish et al. (2017): "Attention is All You Need."</h3>
+                <p>Introduced the Transformer architecture, which has become the foundation for modern NLP systems like BERT and GPT.</p>
+                <a href="https://arxiv.org/pdf/1706.03762" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+            <li>
+                <h3>Volodymyr Mnih et al. (2015): "Human-level control through deep reinforcement learning."</h3>
+                <p>Introduced Deep Q-Learning, demonstrating human-level performance on Atari games.</p>
+                <a href="https://www.nature.com/articles/nature14236" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+            <li>
+                <h3>Marco Tulio Ribeiro, Sameer Singh, and Carlos Guestrin (2016): "Why Should I Trust You? Explaining the Predictions of Any Classifier."</h3>
+                <p>Proposed LIME, a method for explaining the predictions of machine learning models.</p>
+                <a href="https://arxiv.org/pdf/1602.04938" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+            <li>
+                <h3>Yann LeCun et al. (1998): "Gradient-based learning applied to document recognition."</h3>
+                <p>Introduced convolutional neural networks (CNNs) and their application to handwritten digit recognition.</p>
+                <a href="http://yann.lecun.com/exdb/publis/pdf/lecun-98.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+            <li>
+                <h3>Cortes, Corinna, and Vladimir Vapnik (1995): "Support-vector networks."</h3>
+                <p>Introduced the concept of SVMs, a widely used algorithm for classification and regression tasks.</p>
+                <a href="https://link.springer.com/article/10.1007/BF00994018" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
+            <li>
+                <h3>Leo Breiman (2001): "Random Forests."</h3>
+                <p>Introduced the Random Forest algorithm, an ensemble method combining bagging and decision trees.</p>
+                <a href="https://www.stat.berkeley.edu/~breiman/randomforest2001.pdf" target="_blank">Read Paper</a>
+                <span class="checkmark">✔</span>
+            </li>
         </ul>
     </div>
 
