--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="https://scholar.google.com/citations?user=AI9XBA4AAAAJ&hl=en" class="fa-solid fa-book" title="Google Scholar profile"><span class="label">Scholar</span></a></li>
 						<li><a href="https://www.linkedin.com/in/joshuaswhitephd" class="fa-brands fa-linkedin" title="LinkedIn profile"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/securemindorg" class="fa-brands fa-github" title="Github profile"><span class="label">Github</span></a></li>
-						<li><a href="https://www.utica.edu/people/joshua-white-0" class="fas fa-chalkboard-teacher" title="Utica University Directory"></span></a></li>
+						<li><a href="https://www.utica.edu/people/joshua-white-0" class="fas fa-chalkboard-teacher" title="Utica University Directory"><span class="label">Utica University Directory</span></a></li>
 							</ul>
 						</nav>
 						<div class="centered-link">
