--- a/readings.html
+++ b/readings.html
@@ -4,135 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading List</title>
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f3f4f6;
-            color: #333;
-        }
-
-        header {
-            background-color: #4a90e2;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            margin-top: 40px;
-            color: #4a90e2;
-            font-size: 1.8em;
-            border-bottom: 2px solid #4a90e2;
-            padding-bottom: 5px;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 20px 0;
-        }
-
-        li {
-            margin-bottom: 20px;
-            background: #f9f9f9;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            position: relative;
-        }
-
-        li:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        li.visited {
-            background: #d4edda;
-        }
-
-        h3 {
-            margin: 0 0 10px;
-            font-size: 1.4em;
-            color: #333;
-        }
-
-        p {
-            margin: 0 0 15px;
-            font-size: 1em;
-            color: #555;
-        }
-
-        a {
-            text-decoration: none;
-            color: #4a90e2;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .checkmark {
-            display: none;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 1.5em;
-            color: #28a745;
-        }
-
-        li.visited .checkmark {
-            display: block;
-        }
-
-        .centered-link {
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        .centered-link a {
-            font-size: 0.9em;
-            color: #777;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 20px 0;
-            background: #f4f4f4;
-            border-top: 1px solid #ddd;
-            color: #666;
-        }
-
-        footer a {
-            color: #4a90e2;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link href="assets/css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -175,6 +47,9 @@
                 <a href="https://arxiv.org/pdf/1312.6114" target="_blank">Read Paper</a>
                 <span class="checkmark">✔</span>
             </li>
+
+
+
             <li>
                 <h3>Vaswani, Ashish et al. (2017): "Attention is All You Need."</h3>
                 <p>Introduced the Transformer architecture, which has become the foundation for modern NLP systems like BERT and GPT.</p>
@@ -211,13 +86,14 @@
                 <a href="https://www.stat.berkeley.edu/~breiman/randomforest2001.pdf" target="_blank">Read Paper</a>
                 <span class="checkmark">✔</span>
             </li>
+
         </ul>
     </div>
 
     <div class="category">
         <h2>Category 2: Machine Learning</h2>
         <ul>
-                        <li>
+            <li>
                 <h3>Muller and Guido (2017): Introduction to Machine Learning With Python (Ebook)</h3>
                 <p>Introduction to machine learning concepts and applications using Python.</p>
                 <a href="https://www.nrigroupindia.com/e-book/Introduction%20to%20Machine%20Learning%20with%20Python%20(%20PDFDrive.com%20)-min.pdf" target="_blank">Read Paper</a>
@@ -272,11 +148,24 @@
                 <a href="https://mimno.infosci.cornell.edu/info6150/readings/dynamic_topic_models.pdf" target="_blank">Read Paper</a>
                 <span class="checkmark">✔</span>
             </li>
+
         </ul>
     </div>
 
     <div class="category">
-        <h2>Category 3: Deep Learning</h2>
+        <h2>Category 3: Data Network Design</h2>
+        <ul>
+            <!-- Add deep learning resources here -->
+        </ul>
+    </div>
+        <div class="category">
+        <h2>Category 4: Programming</h2>
+        <ul>
+            <!-- Add deep learning resources here -->
+        </ul>
+    </div>
+        <div class="category">
+        <h2>Category 5: General</h2>
         <ul>
             <!-- Add deep learning resources here -->
         </ul>
