--- a/readings.html
+++ b/readings.html
@@ -24,6 +24,8 @@
             });
         });
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6104154610026938"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
